--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/hildorjr/salvae-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.24"
+    "mongoose": "^5.9.24",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
